# test

./: ai  aim  arh  arh2  arh3  arhpub  arhstore  audio  auto  backup  blank.py  comline  configure.in  cron  dbg  deb  debcommit  debinit  debinit2  debinit2b  debinitbase  debinithelper  debinitpush  deblocal  debre  debuild  debuild2  del  dotool  ds  fastget  fasts  force  game  gdbinit  gettext  gettext.php  gpg.gpg  i  index.html  (+47 more)
.github/actions/pkg/: action.yml
.github/actions/rel/: action.yml
.github/actions/test/: action.yml
.github/actions/tester/: action.yml
.github/actions/tester2/: action.yml
.github/workflows/: a.yml  b.yml  basic.yml  dbuild.yml  deb.yml  del.yml
.pc/: applied-patches
act/: __main__.py  a  a.c  datacode.py  m  query.py  t  term.desktop  x  y  z
ai/: ai  pic  upapp  upapppic
arcgis/: a  a.py  aa  b  bb.py  c  c.py  conv  d  dec.py  inc.py  n  nlist.py  p  pixels.py  svg  up  up.py
beep/: a  beep.c
blank/: autostart  blank.py  init  swayidle.service
bookmarks/: a.py  bookmark  cron
bots/: botm  commit  state  stats  sync  syncm  tests  testsm  up
bus/: a  a.py  generic.proto  generic_pb2.py
de/: msg
debian/: README.Debian  changelog  control  copyright
debian/patches/: series
docker/: archarm  if  make  rm  rm2  run  x
docker/cccpy/: init  post
docker/ccpy/: init  post
docker/rufflebld/: ante  init  post  script
ffdec/: .gitignore  a.c  ac  days  decrement  df  dif  r  s  t  timemodif  w  w2  w3  w4  w5  w6
game/: base  del  dif  exp  exp.py  expo.py  ext  ext.py  extension.js  metadata.json  p  pub  up  wf
gdb/: g  gdbinit
git/: add  arhsize  commit  squash  switch_merge
git/github/: arhdel  arhqry  arhsize  brul  bruladd  bruldel  pulls  repsize  rul
git/hub/: arhdel  brul  bruladd  pulls  repsize  rul
gnome/: ext  idl  re
google/: a  a.py  aa  b  bb  c  dif  emufirerestore  emufirerestore.js  firebackup  firebackup.js  ggle.py  google.py  upd.py
live/: __main__.py  a.c  a.py  query.py
load/: a  a.c  a.py  a2  aa.py  b.py  mem
load/b/: b.py  bb.py
min/: a  a.c  a.h  b.c  c.c  d.c  d.h  local  min  nvidia  pas.py  t.c  x  xx  y  z
min/pools/: a  a.py
min/rpi/: min
misc/: adb  ai  aliases  awake  bashrc  ctrl  day  dom  feigenbaum.py  files_sort_by_size  htmlcoms  is_day.php  last  links  loto  ocr  paste  read  read_char  replace  reversion  sed  shd  spell  storage  sysmon  temps  up  upfile  wta  wtatest
misc/min/: local  min  nvidia  pas.py  psgrep
misc/net/: a.py  b.py  conkyrc  lua
multi/: _wine3  _wine6  gdm  q-  q3  q32  q64  wine3  wine3t  wine6  wine6t
music/: a.py
net/: a  a.py  b.py  c  conkyrc  off  x
net/data/: a  b  c  d  recent
net/date/: a  b  c
net/head/: m  main.py  mem  overlay  overlay.js  startz  stopz  v2t.py  x  z
net/mm/: net.txt  net2.txt  ubu
net/rpi/: a_current  chromon  d.sh  etc,network,interfaces  etc,wpa_supplicant,wpa_supplicant.conf  n.sh  netflix  ns.sh  share
net/rpi2/: etc,network,interfaces  etc,wpa_supplicant,wpa_supplicant.conf
photo/: pick.py  pick_from_argv1.py  rot
pkg/: aur  onab  onb  pb  pt  re  relquery  up  upon  ve  verquery
plug/: a  a.py  a.sh  off  off.py  on  on.py  service  t  t.py  t.sh  t1
pyp/: pyin  pypi  pypre  pyqu  pyqu.py  pyver  reversion  suse
remote/: aur  ftp  img  phone  pull  push  pushbase  pushdel  pushdiff  pushforce  pushgist  pushinfo  waswrong
remote/phone/: a  b  c  d  index.php  remote.php
rpm/: .gitignore  copr  flag  get.py  osc  pt  rpm  spec  suse  tito  uponrpm  uprerpm  uprpm
rpm/home:costin/: .gitignore
rpm/home:costin/actionswf/: a  c
rpm/home:costin/edor/: a  c  edor.changes  edor.spec
rpm/home:costin/ocompiler/: .gitignore  a  c  ocompiler.changes
rpm/home:costin/ovideo/: a  c
rpm/home:costin/python-audapa/: a  c
rpm/home:costin/python-dicopp/: a  c  python-dicopp.changes
ruffle/: init  ruffle  script
sh/: local  temp  tmp
sms/: s.sh  ss.sh
sound/: a.py  b  c  c.py  d  dd  e  ee  f
ssh/: a  aa  b  bb  c  cm  com  cp  init0  sftp  ssh
startup/: alias  aliases  bashrc  bashrc2  bashrc3  bashrceven  begin  bookmark  cp  day  evening  exports  is_day.php  mv  setcolors  term.desktop  termsz
stats/: a.c  a.h  b.c  com  commit  concat  d  date  dif  f  fixdate  g  g0  g1  g2  gh  gx  h  h2  h3  h4  h5  h6  k  k2  k3  k4  kk  ko  msg  newparse  newpost  newpre  prepare  prevdate  projs  pub  recon  reconcatenator  reconprojs  (+1 more)
stats/2022/: date  h  h2  h3  h4  h5  h6
sync/: a.c  commit  configs  fork  ls  reparent  s  up
sync/edor/.pc/1.x9/: configure.ac  readme.md
sync/edor/.pc/1.x9/arh/: pub
sync/edor/.pc/1.x9/s/: bar.c  base.h  main.c  top.h
sync/edor/.pc/1.x9/s/inc/main/: curses.h  stdio.h
sync/sirc/.pc/1.jammy7/: configure.ac  main.c
sync/sirc/.pc/1.jammy7/arh/: pub
temp/: disp  fanshim  local  poff  pon  teget  temp  temperature_sensor_code.py  tempget  tget
tiktok/: keys  stop  tiktok
update/: arch  arh  cros  cross  dif  n  str  test  up  upd
validatelog/: pkg
vnc/: a  b  scr  sdn  sdo  sdown  vnc
wland/: ac  cl  id  mv  mx
(+1788 files in other folders)
